Bug 155322 - Importing merged cells, the colour scale colour is not set correctly.
Summary: Importing merged cells, the colour scale colour is not set correctly.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:24.2.0 target:7.6.0.2
Keywords:
: 145713 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-05-15 12:24 UTC by NISZ LibreOffice Team
Modified: 2023-07-27 15:22 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file (8.23 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2023-05-15 12:25 UTC, NISZ LibreOffice Team
Details
Error in Writer (218.75 KB, image/png)
2023-05-15 12:27 UTC, NISZ LibreOffice Team
Details
Correct appearance in excel (29.00 KB, image/png)
2023-05-15 12:28 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-05-15 12:24:56 UTC
Description:
When importing merged cells, the colour scale colour is not set correctly.

Steps to Reproduce:
1. Open attached file in Calc.
2. Compare the file opened in Excel.

Actual Results:
The colour scale is not set correctly.

Expected Results:
The colour scale is set correctly.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 6f1534940ac12ff8e46f4782e18cfb6cf585da39
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2023-05-15 12:25:28 UTC
Created attachment 187290 [details]
Sample file
Comment 2 NISZ LibreOffice Team 2023-05-15 12:27:30 UTC
Created attachment 187291 [details]
Error in Writer
Comment 3 NISZ LibreOffice Team 2023-05-15 12:28:51 UTC
Created attachment 187292 [details]
Correct appearance in excel
Comment 4 Commit Notification 2023-07-25 08:29:14 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ee4bd745be5dee15b68ca483f7f7771957ae3b3e

tdf#155322 sc: fix conditional format color scale in merged cells

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Tibor Nagy 2023-07-25 09:47:52 UTC
*** Bug 145713 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2023-07-26 09:05:27 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/83ead6e42f82c03f807cb4b003fcac35135de459

tdf#155322 sc: fix conditional format color scale in merged cells

It will be available in 7.6.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 BogdanB 2023-07-27 15:22:32 UTC
Good in
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 70f84abd6379c47db96d81d4b028041daa8c5d24
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Is bad in (just for comparing the bug fixed)
Version: 7.5.3.2 (X86_64) / LibreOffice Community
Build ID: 9f56dff12ba03b9acd7730a5a481eea045e468f3
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded